--- a/com.gfss-website-backend/src/main/resources/application.properties
+++ b/com.gfss-website-backend/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=com.gfss-website-backend
 
 spring.mail.host = smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=contactus@growingflowers-solutions.com
-spring.mail.password=vxdrnfrrnofjjszd
+#spring.mail.username=contactus@growingflowers-solutions.com
+#spring.mail.password=vxdrnfrrnofjjszd
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
